# typed_input

./: .gitignore  LICENSE  README.md  datetime_input_test.py  decimal_input_test.py  float_input_test.py  int_input_test.py  pyproject.toml  ruff.toml  tox.ini  typed_input.py  typed_input_test.py
